# Knowledge-base-Search-Engine

./: README.md
backend/: .env  config.py  main.py  pyproject.toml  requirements.txt  utils.py
backend/api/: app.py
backend/ingestion/: upsert.py  vectorstore.py
backend/rag_graph/: graph.py
backend/tools/: tools.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FilePreview.jsx  FileUploader.jsx  LoadingSpinner.jsx  QuerySection.jsx  ResultsSection.jsx  Toast.jsx  ToastProvider.jsx  UploadButton.jsx  UploadSection.jsx  index.js
frontend/src/pages/: UploadPage.jsx
